--- a/src/blocks/modules/universal-form/universal-form.scss
+++ b/src/blocks/modules/universal-form/universal-form.scss
@@ -47,6 +47,7 @@
             position: absolute;
             opacity: 0;
             z-index: -1;
+            max-width: 100%;
         }
 
         &__header {
@@ -87,6 +88,20 @@
                     display: block;
                     margin-right: 8px;
                     flex-shrink: 0;
+                }
+
+                span {
+                    display: none;
+                    &.pc {
+                        @media (min-width: 768px) {
+                            display: inline;
+                        }
+                    }
+                    &.mob {
+                        @media (max-width: 767px) {
+                            display: inline;
+                        }
+                    }
                 }
             }
         }
