--- a/src/styles/base/_inputs.scss
+++ b/src/styles/base/_inputs.scss
@@ -22,6 +22,7 @@
     }
     &__input {
         @include transition();
+        will-change: box-shadow;
         box-sizing: border-box;
         border-radius: 5px;
         outline: none;
