--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -9,8 +9,7 @@
                     <div class="swiper-slide">
                         <a href="/" class="card card--image">
                             <picture class="card-img">
-                                <!--[if IE 9]>
-                                <video style="display: none;"><![endif]-->
+                                <!--[if IE 9]><video style="display: none;"><![endif]-->
                                 <source srcset="img/AA5J7280.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
                                 <img src="img/AA5J7280.jpg" title="Новые технологии на ВМЗ в 2019"
