--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -2,8 +2,8 @@
     @include transition();
     overflow: hidden;
     background-color: #fff;
-    border-radius: 5px;
-    border: solid 1px $border-10;
+    border-radius: 5px 5px 0 0;
+    border: none;
 
     &:hover {
         text-decoration: none;
@@ -18,6 +18,8 @@
     &--main {
         position: relative;
         height: 440px;
+        border: none;
+        border-radius: 5px;
         @media (max-width: 1023px) {
             height: 414px;
         }
@@ -65,6 +67,7 @@
         .card-body {
             position: relative;
             z-index: 2;
+            border: none;
             @media (max-width: 1023px) {
                 display: flex;
                 flex-direction: column;
@@ -146,6 +149,7 @@
         .card-footer {
             position: relative;
             z-index: 2;
+            border: none;
 
             .card-date, .card-like, .card-comment {
                 color: $white;
@@ -164,6 +168,8 @@
 
     &--image {
         position: relative;
+        border: none;
+        border-radius: 5px;
         @media(max-width: 1023px) {
             height: 414px;
         }
@@ -231,6 +237,7 @@
             flex-direction: column;
             position: relative;
             z-index: 2;
+            border: none;
         }
 
         .card-tags {
@@ -287,6 +294,7 @@
             justify-content: flex-start;
             position: relative;
             z-index: 2;
+            border: none;
 
 
             .card-like {
@@ -301,7 +309,6 @@
 
     &-img {
         display: block;
-        flex-basis: 100%;
         max-height: 200px;
         overflow: hidden;
         background-color: $silver;
@@ -324,6 +331,9 @@
 
     &-body {
         padding: 20px 20px 0;
+        border-left: 1px solid $border-10;
+        border-right: 1px solid $border-10;
+
     }
 
     &-tags {
@@ -405,6 +415,10 @@
         border: none;
         padding: 16px 20px 20px;
         background-color: transparent;
+        border-left: 1px solid $border-10;
+        border-right: 1px solid $border-10;
+        border-bottom: 1px solid $border-10;
+        border-radius: 0 0 5px 5px !important;
         @media(max-width: 1279px) {
             padding-bottom: 16px;
         }
