--- a/src/blocks/modules/document-list/document-list.scss
+++ b/src/blocks/modules/document-list/document-list.scss
@@ -47,11 +47,14 @@
             margin: -1px -16px 0;
             padding: 17px 64px 16px 16px;
             @media (max-width: 767px) {
-                margin-left: 0;
-                margin-right: 0;
+                margin: 0 0 0;
                 box-shadow: none;
-                padding-left: 0;
-                padding-right: 0;
+                padding: 16px 0 15px 0;
+                border-bottom: 1px solid $border-10;
+                border-radius: 0;
+                .name {
+                    color: $coral;
+                }
             }
 
             &:after {
