--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -36,7 +36,8 @@
             top: 24px;
             opacity: 1;
             @media (max-width: 767px) {
-                top: 12px;
+                top: 20px;
+                right: 16px;
             }
         }
     }
@@ -206,6 +207,7 @@
         background-color: transparent;
         background-image: url('../img/icons/icon__zoom.svg');
         opacity: 0;
+        padding: 0;
     }
 
     &__description {
