--- a/src/styles/base/_table.scss
+++ b/src/styles/base/_table.scss
@@ -11,14 +11,26 @@
     border-collapse: separate;
     border-color: transparent;
     border-spacing: 0;
-    display: block;
+    display: inline-block;
     overflow: auto !important;
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
     @media (max-width: 767px) {
         margin-left: -16px;
+        padding-left: 16px;
+        max-width: 100vw;
         margin-right: -16px;
     }
-	
+
     tr {
+        @media (max-width: 767px) {
+            padding-right: 16px;
+        }
+
         &:last-child {
             td {
                 border: none;
@@ -31,12 +43,15 @@
         border-bottom: 1px solid $border-10;
         padding: 16px 8px;
         vertical-align: top;
+
         &:first-child {
             padding-left: 0;
         }
+
         &:last-child {
             padding-right: 0;
         }
+
         span {
             display: block;
             width: 100%;
@@ -56,15 +71,43 @@
 .table-bordered {
     border-radius: 5px;
     overflow: hidden;
-    border: 1px solid $border-10;
     border-collapse: separate;
+
+    th {
+        border-top: 1px solid $border-10;
+        &:first-child {
+            border-top-left-radius: 5px;
+        }
+        &:last-child {
+            border-top-right-radius: 5px;
+        }
+    }
 
     td, th {
         &:first-child {
             padding-left: 16px;
+            border-left: 1px solid $border-10;
         }
+
         &:last-child {
             padding-right: 16px;
+            border-right: 1px solid $border-10;
+        }
+    }
+
+    tr {
+        &:last-of-type {
+            td {
+                border-bottom: 1px solid $border-10;
+                &:first-child {
+                    border-left: 1px solid $border-10;
+                    border-bottom-left-radius: 5px;
+                }
+                &:last-child {
+                    border-bottom-right-radius: 5px;
+                    border-right: 1px solid $border-10;
+                }
+            }
         }
     }
 }
@@ -73,18 +116,45 @@
     tbody tr:nth-of-type(odd) {
         background-color: $silver-light;
     }
-    border-radius: 5px;
+
     overflow: hidden;
-    border: 1px solid  $silver-dark;
     border-collapse: separate;
+    th {
+        border-top: 1px solid $border-10;
+        &:first-child {
+            border-top-left-radius: 5px;
+        }
+        &:last-child {
+            border-top-right-radius: 5px;
+        }
+    }
 
     th, td {
         border-color: $silver-dark;
+
         &:first-child {
             padding-left: 16px;
+            border-left: 1px solid $border-10;
         }
+
         &:last-child {
             padding-right: 16px;
+            border-right: 1px solid $border-10;
+        }
+    }
+    tr {
+        &:last-of-type {
+            td {
+                border-bottom: 1px solid $border-10;
+                &:first-child {
+                    border-left: 1px solid $border-10;
+                    border-bottom-left-radius: 5px;
+                }
+                &:last-child {
+                    border-bottom-right-radius: 5px;
+                    border-right: 1px solid $border-10;
+                }
+            }
         }
     }
 }
@@ -98,6 +168,7 @@
     .thead-dark {
         background-color: $ctrl-black;
         border-spacing: 0;
+
         th {
             color: $white;
             border-color: $ctrl-black;
@@ -107,28 +178,55 @@
 
 .table-dark {
     color: $table-dark-color;
-    background-color: $ctrl-black;
-    border-radius: 5px;
     overflow: hidden;
-    border: 1px solid rgba(144, 144, 153, 0.3);
     border-collapse: separate;
+    th {
+        border-top: 1px solid rgba(144, 144, 153, 0.3);
+        &:first-child {
+            border-top-left-radius: 5px;
+        }
+        &:last-child {
+            border-top-right-radius: 5px;
+        }
+    }
+    tr {
+
+        &:last-of-type {
+            td {
+                border-bottom: 1px solid rgba(144, 144, 153, 0.3);
+                &:first-child {
+                    border-left: 1px solid rgba(144, 144, 153, 0.3);
+                    border-bottom-left-radius: 5px;
+                }
+                &:last-child {
+                    border-bottom-right-radius: 5px;
+                    border-right: 1px solid rgba(144, 144, 153, 0.3);
+                }
+            }
+        }
+    }
 
     th, td, thead th {
         border-color: rgba(144, 144, 153, 0.3);
     }
+
     td, th {
+        background-color: $ctrl-black;
         &:first-child {
             padding-left: 16px;
+            border-left: 1px solid rgba(144, 144, 153, 0.3);
         }
+
         &:last-child {
             padding-right: 16px;
+            border-right: 1px solid rgba(144, 144, 153, 0.3);
         }
     }
 
 
     &.table-striped {
-        tbody tr:nth-of-type(odd) {
-            background-color: rgba(144, 144, 153, 0.1);
+        tbody tr:nth-of-type(odd) td {
+            background-color: #444454;
         }
     }
 
