--- a/src/styles/pages/text-page.scss
+++ b/src/styles/pages/text-page.scss
@@ -10,6 +10,20 @@
         .thumbs-slider:not(.thumbs-slider--desc) {
             margin-right: -16px;
             margin-left: -16px;
+
+            .thumbs-slider__main .swiper-slide {
+                border-radius: 0;
+            }
+        }
+        .thumbs-slider.thumbs-slider--desc {
+            .thumbs-slider__nav-img {
+                border-radius: 0 0 5px 5px;
+            }
+        }
+        .thumbs-slider.thumbs-slider--border {
+            .thumbs-slider__nav-img {
+                border-radius: 5px 5px 0 0;
+            }
         }
     }
     .progress {
@@ -56,8 +70,9 @@
             justify-content: center;
             margin-bottom: 20px;
             @media (max-width: 767px) {
-                margin-bottom: 12px;
+                align-items: baseline;
                 justify-content: flex-start;
+                margin-bottom: 24px;
             }
 
             &-item {
@@ -248,7 +263,7 @@
                 bottom: 0;
                 left: 0;
                 width: 100%;
-                padding: 8px 20px;
+                padding: 20px 20px;
                 box-shadow: 0 -4px 20px 0 rgba(0, 0, 0, 0.1);
                 background-color: #ffffff;
 
