--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -373,6 +373,8 @@
     }
 
     &__close {
+        display: flex;
+        align-items: center;
         border: none;
         padding: 0;
         background: none;
@@ -399,7 +401,6 @@
             margin-right: 4px;
             background-size: contain;
             background-position: center;
-            vertical-align: bottom;
             @media (max-width: 1023px) {
                 width: 32px;
                 height: 32px;
