--- a/src/styles/pages/text-page.scss
+++ b/src/styles/pages/text-page.scss
@@ -76,6 +76,8 @@
             }
 
             &-item {
+                display: flex;
+                align-items: center;
                 margin: 0 16px 16px;
                 font-size: rem(16);
                 line-height: 1.25;
@@ -104,6 +106,8 @@
                 }
 
                 .btn {
+                    display: flex;
+                    align-items: center;
                     min-width: auto;
                     padding: 0;
                     background: none;
@@ -111,7 +115,6 @@
                     font-weight: $font-weight-light;
                     line-height: 1.25;
                     color: $text-silver;
-                    vertical-align: middle;
                 }
 
                 &.share {
