fix opechatka, add modifier

--- a/src/blocks/modules/comments/comments.scss
+++ b/src/blocks/modules/comments/comments.scss
@@ -28,7 +28,7 @@
         }
     }
 
-    &__massage {
+    &__message {
         margin-bottom: 44px;
         width: 100%;
 
@@ -218,7 +218,7 @@
             }
         }
 
-        .comments__massage {
+        .comments__message {
             display: none;
 
             margin: 24px 0 8px  56px;
