--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -302,7 +302,7 @@
                                 </picture>
                                 <div class="main-page__slider-content">
                                     <div class="text">Фестиваль «ОМК — детям»</div>
-                                    <div class="date">22 апреля в 19:00</div>
+                                    <div class="date date--white">22 апреля в 19:00</div>
                                 </div>
                             </a>
                         </div>
