--- a/src/templates/pages/information-systems.html
+++ b/src/templates/pages/information-systems.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row news__row main-header">
         <div class="col-12">
-            <h1>Информационные системы</h1>
+            <h1>Информацион&shy;ные системы</h1>
         </div>
     </div>
 
@@ -25,7 +25,7 @@
     </div>
 
     <div class="row news__row">
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0"
             title="ОМК Docs" 
             class="info-system__services">
@@ -33,7 +33,7 @@
                 <span class="name">ОМК Docs</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0"
             title="Мониторинг 5С-офис"
             class="info-system__services">
@@ -41,7 +41,7 @@
                 <span class="name">Мониторинг 5С-офис</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0" 
             title="Следующий формат"
             class="info-system__services">
@@ -49,7 +49,7 @@
                 <span class="name">Следующий формат</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0" 
             title="Q3MET"
             class="info-system__services">
@@ -57,7 +57,7 @@
                 <span class="name">Q3MET</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0"
             title="ОМК Docs" 
             class="info-system__services">
@@ -65,7 +65,7 @@
                 <span class="name">ОМК Docs</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0"
             title="Мониторинг 5С-офис"
             class="info-system__services">
@@ -73,7 +73,7 @@
                 <span class="name">Мониторинг 5С-офис</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0" 
             title="Следующий формат"
             class="info-system__services">
@@ -81,7 +81,7 @@
                 <span class="name">Следующий формат</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0" 
             title="Q3MET"
             class="info-system__services">
@@ -89,7 +89,7 @@
                 <span class="name">Q3MET</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0"
             title="ОМК Docs" 
             class="info-system__services">
@@ -97,7 +97,7 @@
                 <span class="name">ОМК Docs</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0"
             title="Мониторинг 5С-офис"
             class="info-system__services">
@@ -105,7 +105,7 @@
                 <span class="name">Мониторинг 5С-офис</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0" 
             title="Следующий формат"
             class="info-system__services">
@@ -113,7 +113,7 @@
                 <span class="name">Следующий формат</span>
             </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
             <a href="#0" 
             title="Q3MET"
             class="info-system__services">
@@ -136,84 +136,84 @@
     </div>
 
     <div class="row news__row">
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Отчёт по фактически отработанному времени" 
             class="info-system__sys">
                 Отчёт по фактически отработанному времени
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Производственный проект «South Stream»" 
             class="info-system__sys">
                 Производственный проект «South Stream»
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Производственный проект «South Stream»" 
             class="info-system__sys">
                 Производственный проект «South Stream»
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Отчёт по фактически отработанному времени" 
             class="info-system__sys">
                 Отчёт по фактически отработанному времени
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Производственный проект «South Stream»" 
             class="info-system__sys">
                 Производственный проект «South Stream»
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Отчёт по фактически отработанному времени" 
             class="info-system__sys">
                 Отчёт по фактически отработанному времени
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Производственный проект «South Stream»" 
             class="info-system__sys">
                 Производственный проект «South Stream»
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Отчёт по фактически отработанному времени" 
             class="info-system__sys">
                 Отчёт по фактически отработанному времени
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Производственный проект «South Stream»" 
             class="info-system__sys">
                 Производственный проект «South Stream»
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Отчёт по фактически отработанному времени" 
             class="info-system__sys">
                 Отчёт по фактически отработанному времени
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Производственный проект «South Stream»" 
             class="info-system__sys">
                 Производственный проект «South Stream»
             </a>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <a href="#0"
             title="Отчёт по фактически отработанному времени" 
             class="info-system__sys">
