fix text-logo, responsive search result, fix breadcrumbs, add fonts

--- a/src/blocks/modules/breadcrumbs/breadcrumbs.scss
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs.scss
@@ -28,5 +28,11 @@
         a {
             color: $text-silver;
         }
+
+        &:last-child {
+            &:before {
+                display: none;
+            }
+        }
     }
 }
