--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -50,6 +50,7 @@ $container-max-widths: (
     xl: 1120px
 );
 
+$font-family-sans-serif: 'SegoeUI', system-ui, -apple-system, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 $grid-columns: 12;
 $grid-gutter-width: 32px;
 
