--- a/src/templates/pages/information-systems.html
+++ b/src/templates/pages/information-systems.html
@@ -2,7 +2,10 @@
 {% block content %}
 <div class="wrapper info-system">
     <div class="row">
-        {% include 'breadcrumbs/breadcrumbs.html' %}
+        <div class="col-12">
+            {% include 'breadcrumbs/breadcrumbs.html' %}
+        </div>
+
     </div>
     <div class="row news__row main-header">
         <div class="col-12">
