--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -60,7 +60,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                @include object-fit(cover, center);
             }
         }
 
@@ -227,7 +227,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                @include object-fit(cover, center);
             }
         }
 
@@ -325,7 +325,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            @include object-fit(cover, center);
         }
     }
 
