--- a/src/blocks/modules/comments/comments.scss
+++ b/src/blocks/modules/comments/comments.scss
@@ -113,8 +113,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
-                object-position: center;
+                @include object-fit(cover, center);
             }
         }
 
