--- a/src/blocks/modules/gallery/gallery.scss
+++ b/src/blocks/modules/gallery/gallery.scss
@@ -27,8 +27,6 @@
             display: block;
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            object-position: center;
         }
     }
 
@@ -61,8 +59,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
-                object-position: center;
+                @include object-fit(cover, center);
             }
             &:nth-child(3n) {
                 margin-right: 0;
@@ -131,8 +128,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                object-position: center;
-                object-fit: cover;
+                @include object-fit(cover, center);
             }
         }
     }
