--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -188,7 +188,7 @@
                 left: 50%;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                @include object-fit(cover, center);
                 margin: auto;
                 transform: translate(-50%, -50%);
             }
