--- a/src/blocks/modules/header-search/header-search.scss
+++ b/src/blocks/modules/header-search/header-search.scss
@@ -102,8 +102,7 @@
                     width: 100%;
                     height: 100%;
                     overflow: hidden;
-                    object-fit: cover;
-                    object-position: center;
+                    @include object-fit(cover, center);
                     border-radius: 50%;
                 }
             }
@@ -297,8 +296,7 @@
                         display: block;
                         width: 100%;
                         height: 100%;
-                        object-fit: cover;
-                        object-position: center;
+                        @include object-fit(cover, center);
                     }
                 }
 
