--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -196,8 +196,7 @@
                     display: block;
                     width: 100%;
                     height: 100%;
-                    object-fit: cover;
-                    object-position: center;
+                    @include object-fit(cover, center);
                 }
             }
         }
@@ -255,8 +254,7 @@
                         display: block;
                         width: 100%;
                         height: 100%;
-                        object-fit: cover;
-                        object-position: center;
+                        @include object-fit(cover, center);
                     }
                 }
                 .name {
