--- a/src/blocks/modules/video/video.scss
+++ b/src/blocks/modules/video/video.scss
@@ -71,8 +71,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            object-position: center;
+            @include object-fit(cover, center);
         }
     }
 
@@ -131,8 +130,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
-                object-position: center;
-                object-fit: cover;
+                @include object-fit(cover, center);
             }
         }
 
