--- a/src/styles/pages/ads-list.scss
+++ b/src/styles/pages/ads-list.scss
@@ -151,7 +151,6 @@
         display: block;
         width: 100%;
         height: 100%;
-        object-fit: cover;
-        object-position: center;
+        @include object-fit(cover, center);
     }
 }
