--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -224,8 +224,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            object-position: right center;
+            @include object-fit(cover,right center);
         }
     }
 
