--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -647,10 +647,13 @@
                     width: 100%;
                     max-width: 100%;
                     border: 1px solid $border-10;
-                    padding: 32px 52px 12px 16px;
-                    border-radius: 5px;
                     box-shadow: none;
                     text-align: left;
+
+                    @media (max-width: 520px) {
+                        padding: 32px 52px 12px 16px;
+                        border-radius: 5px;
+                    }
 
                     &:hover, &:active {
                         transform: none;
@@ -902,6 +905,12 @@
 
         &--media {
             margin-top: 64px;
+        }
+    }
+
+    &--inner {
+        .results-section {
+            margin-top: 32px !important;
         }
     }
 }
