part of fixes after design checks

--- a/src/blocks/modules/profile-edit/profile-edit.scss
+++ b/src/blocks/modules/profile-edit/profile-edit.scss
@@ -24,6 +24,7 @@
             padding: 32px;
             background: $white;
             border-radius: 8px;
+            border: none;
         }
     }
 
