--- a/src/blocks/modules/information-systems-search/information-systems-search.scss
+++ b/src/blocks/modules/information-systems-search/information-systems-search.scss
@@ -59,7 +59,8 @@
         @include transition();
         width: 100%;
         border: 1px solid $silver-light;
-        padding: 11px 16px 15px 48px;
+        padding: 13px 16px 13px 48px;
+        color: $text-black;
         font-size: 1rem;
         line-height: 1.25;
         background-color: $silver-light;
@@ -71,6 +72,7 @@
 
         &:focus {
             background-color: $white;
+            border-color: $border-20;
             border-radius: 5px 5px 0 0;
             outline: none;
             @media(max-width: 575px) {
@@ -82,7 +84,7 @@
         }
 
         &::placeholder {
-            color: $text-silver;
+            color: $silver-dark;
         }
 
         &.active {
@@ -111,11 +113,14 @@
         left: 0;
         width: 100%;
         max-height: 370px;
-        border: 1px solid $silver-light;
+        border: 1px solid $border-20;
         background: $white;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+        border-radius: 0 0 5px 5px;
         @media (max-width: 575px) {
             height: calc(100vh - 65px);
             max-height: calc(100vh - 65px);
+            border-radius: 0;
         }
 
         &__list {
