--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -39,7 +39,7 @@
             border-top: 1px solid $border-10;
             padding: 25px 0 24px;
             @media(max-width: 767px) {
-                padding: 17px 0 16px;
+                padding: 17px 0 20px;
             }
         }
 
@@ -56,7 +56,7 @@
                 width: 100%;
                 height: 0;
                 padding-bottom: 100%;
-                border-radius: 50%;
+                border-radius: 100%;
                 overflow: hidden;
 
                 img {
@@ -228,10 +228,10 @@
             @include transition();
             width: 100%;
             border-top: 1px solid $border-10;
-            padding: 25px 0 24px;
+            padding: 25px 0 28px;
             color: $text-black;
             @media (max-width: 767px) {
-                padding: 17px 0 16px;
+                padding: 17px 0 20px;
             }
         }
 
@@ -328,6 +328,7 @@
                 margin: 8px 0;
                 @media(max-width: 767px) {
                     font-size: 1rem;
+                    margin: 0 0 8px 0;
                 }
             }
 
@@ -746,7 +747,7 @@
             @include transition();
             display: flex;
             align-items: baseline;
-            padding: 4px 16px 7px;
+            padding: 5px 16px 7px;
             border-radius: 100px;
             background: $white;
 
